# quirk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  parse-msg.c
include/quirk/: alloc.h  message.h  message.hpp  strview.h
src/message/: CMakeLists.txt  message.def  parser.re.c
